initial. not works yet (docker db connection not here)